big-app/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: "bigapp-namespace"
  name: main-app-ing
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            backend:
              serviceName: pingpongapp-svc
              servicePort: 1234
          - path: /
            backend:
              serviceName: randomstringgen-svc
              servicePort: 2345
